Bug 1802736 - Make `AutoInlineStyleSetter` stop using different type of elements from the HTML/CSS mode point of view r=m_kato

The other browsers do not move styling nodes to existing element if the element
is never created in the mode. For example, `execCommand("bold")` in the CSS mode
for `[abc]<b>def</b>`, the other browsers make it
`<span style="font-weight: bold">abc</span><b>def</b>`, but Gecko does
`<b>abcdef</b>`.  Similarly, `execCommand("bold")` in the HTML mode for
`[abc]<span style="font-weight: bold">def</span>`, the other browsers make it
`<b>abc</b><span style="font-weight: bold">def</span>`, but Gecko does it
`<span style="font-weight: bold">abcdef</span>`.

This patch makes Gecko align the behavior to the other browsers.

Differential Revision: https://phabricator.services.mozilla.com/D163188